--- a/Grafico/CuentaBancaria.form
+++ b/Grafico/CuentaBancaria.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="CuentaBancoPanel" layout-manager="GridLayoutManager" row-count="5" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="648" height="563"/>
+      <xy x="20" y="20" width="733" height="563"/>
     </constraints>
     <properties>
       <font name="Segoe UI Black" size="28" style="1"/>
@@ -36,6 +36,8 @@
               <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-16757148"/>
+              <foreground color="-394241"/>
               <text value="Proyecciones"/>
             </properties>
           </component>
@@ -44,6 +46,8 @@
               <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-16757148"/>
+              <foreground color="-394241"/>
               <text value="Prestamos"/>
             </properties>
           </component>
@@ -52,6 +56,8 @@
               <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-16757148"/>
+              <foreground color="-394241"/>
               <text value="Tarjetas de Credito"/>
             </properties>
           </component>
@@ -60,6 +66,8 @@
               <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-16757148"/>
+              <foreground color="-394241"/>
               <text value="Stocks"/>
             </properties>
           </component>
@@ -68,6 +76,8 @@
               <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-16757148"/>
+              <foreground color="-394241"/>
               <text value="Ingresos y Gastos"/>
             </properties>
           </component>
@@ -76,6 +86,8 @@
               <grid row="4" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-16757148"/>
+              <foreground color="-394241"/>
               <text value="Plazos fijos"/>
             </properties>
           </component>
@@ -84,6 +96,8 @@
               <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
+              <background color="-16757148"/>
+              <foreground color="-394241"/>
               <text value="Cuentas Bancarias"/>
             </properties>
           </component>
@@ -182,6 +196,14 @@
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
+      <component id="d94bc" class="javax.swing.JButton" binding="consultarMovimientosButton" default-binding="true">
+        <constraints>
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Consultar Movimientos"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
