--- a/Grafico/ConsultarMovimientos.form
+++ b/Grafico/ConsultarMovimientos.form
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Grafico.ConsultarMovimientos">
-  <grid id="27dc6" binding="ConsultaMovPanel" layout-manager="GridLayoutManager" row-count="8" column-count="22" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="MovPanel" layout-manager="GridLayoutManager" row-count="8" column-count="22" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="959" height="535"/>
     </constraints>
     <properties>
       <background color="-16757148"/>
-      <preferredSize width="960" height="930"/>
+      <preferredSize width="930" height="920"/>
     </properties>
     <border type="none"/>
     <children>
@@ -34,15 +34,19 @@
           <grid row="2" column="1" row-span="2" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="b3663" class="javax.swing.JComboBox" binding="comboBox2" default-binding="true">
+      <component id="b3663" class="javax.swing.JComboBox" binding="cbID">
         <constraints>
-          <grid row="1" column="7" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="7" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="83" height="34"/>
+          </grid>
         </constraints>
         <properties/>
       </component>
       <component id="463de" class="javax.swing.JLabel">
         <constraints>
-          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="4" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="26" height="34"/>
+          </grid>
         </constraints>
         <properties>
           <font name="Segoe UI Black" size="18"/>
@@ -78,17 +82,6 @@
           <text value="Nombre de Cuenta:"/>
         </properties>
       </component>
-      <component id="c4f1" class="javax.swing.JTextField" binding="textField1" default-binding="true">
-        <constraints>
-          <grid row="2" column="7" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="150" height="-1"/>
-          </grid>
-        </constraints>
-        <properties>
-          <doubleBuffered value="false"/>
-          <inheritsPopupMenu value="false"/>
-        </properties>
-      </component>
       <component id="981a2" class="javax.swing.JLabel">
         <constraints>
           <grid row="0" column="7" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
@@ -99,7 +92,7 @@
           <text value="Movimiento de Cuentas"/>
         </properties>
       </component>
-      <component id="4d8df" class="javax.swing.JComboBox" binding="comboBox1" default-binding="true">
+      <component id="4d8df" class="javax.swing.JComboBox" binding="cbNombreCuenta">
         <constraints>
           <grid row="3" column="7" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -120,7 +113,7 @@
           <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
       </hspacer>
-      <component id="d4032" class="javax.swing.JButton" binding="buscarButton" default-binding="true">
+      <component id="d4032" class="javax.swing.JButton" binding="btnBuscar">
         <constraints>
           <grid row="5" column="7" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -128,6 +121,15 @@
           <text value="Buscar"/>
         </properties>
       </component>
+      <grid id="8198d" binding="datePanelContainer" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="2" column="7" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties/>
+        <border type="none"/>
+        <children/>
+      </grid>
     </children>
   </grid>
 </form>
